--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mantine/core": "7.7.1",
-    "@mantine/hooks": "7.7.1",
+    "@mantine/core": "^7.7.2",
+    "@mantine/hooks": "^7.7.2",
+    "axios": "^1.6.8",
     "next": "14.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -21,8 +22,8 @@
     "@types/react-dom": "18.2.21",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.3",
-    "postcss": "^8.4.35",
-    "postcss-preset-mantine": "1.13.0",
+    "postcss": "^8.4.38",
+    "postcss-preset-mantine": "^1.14.4",
     "postcss-simple-vars": "^7.0.1",
     "typescript": "5.4.2"
   },
