--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mantine/core": "^7.7.2",
     "@mantine/hooks": "^7.7.2",
+    "@tabler/icons-react": "^3.2.0",
     "axios": "^1.6.8",
     "next": "14.1.3",
     "react": "18.2.0",
